examples/test/testpolicy16822.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16822
  namespace: namespace271
spec:
  podSelector:
    matchLabels:
      key35: value26
      key41: value41
      key15: value21
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key47: value38
          key26: value8
          key20: value4
